Начал разметку главной страницы

--- a/index.html
+++ b/index.html
@@ -2,11 +2,99 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
+    <title>Седона</title>
   </head>
   <body>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Профессиональный HTML и CSS, уровень 1</a>».</p>
+  <header class="main-heade">
+    <nav class="main-navigation">
+      <a class="main-navigation-logo">
+        <img src="img/main-logo.jpg" width="110" height="110" alt="Логотип Седона">
+      </a>
+      <ul class="main-navigation-menu">
+        <li><a href="#">Информация</a></li>
+        <li><a href="#">Фото и видео</a></li>
+        <li class="navigation-logo"><a href="index.html">Logo</a></li>
+        <li><a href="#">Карта штата</a></li>
+        <li><a href="#">Гостиницы</a></li>
+      </ul>
+    </nav>
+
+  </header>
+  <main class="container">
+    <h1 class="visually-hidden">Сайт городка Седона</h1>
+    <section class="advantage">
+        <h2>Седона - небольшой городок в Аризоне,<br>
+          заслуживающий большего!</h2>
+      <p>Рассмотрим 5 причин, по которым седона круче, чем гранд-каньон!</p>
+    </section>
+    <section class="advantage-number-uno">
+      <h2>Настоящий городок</h2>
+      <span>-№1-</span>
+      <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
+      <img src="img/advantage-number-uno.jpg" width="110" height="110" alt="Фото городка">
+      <ul class="advantage-number-uno-items">
+        <li>
+          <h3>Жилье</h3>
+          <p>Рекомендуем пожить в настоящем отеле, все как в кино!</p>
+        </li>
+        <li>
+          <h3>Еда</h3>
+          <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+        </li>
+        <li>
+          <h3>Сувениры</h3>
+          <p>Не только китайского, но и местного производства!</p>
+        </li>
+      </ul>
+    </section>
+
+    <section class="advantage-number-two">
+      <h2>Там есть мост дьявола</h2>
+      <span>-№2-</span>
+      <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+      <img src="img/advantage-number-two.jpg" width="110" height="110" alt="Фото моста Дьявола">
+    </section>
+
+    <section class="advantages-other">
+      <ul class="advantage-number-two-items">
+        <li>
+          <h3>Небольшая площадь</h3>
+          <span>- №3 -</span>
+          <p>Все достопримечательности находятся очень близко</p>
+        </li>
+        <li>
+          <h3>Красивая дорога</h3>
+          <span>- №4 -</span>
+          <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+        </li>
+        <li>
+          <h3>Мало туристов</h3>
+          <span> - №5 -</span>
+          <p>Большинство едет в Гранд-Каньон и толпится там</p>
+        </li>
+      </ul>
+    </section>
+
+    <section class="appointment-info">
+      <h2>Заинтересовались?</h2>
+      <p>Укажите предпологаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+      <a class="button search-hostel-button" href="#">Поиск гостиницы в Седоне</a>
+    </section>
+
+    <section class="modal modal-appointment">
+      <h2 class="visually-hidden">Бронирование</h2>
+      <form class="appointment-form" action="#" method="post">
+        
+      </form>
+    </section>
+
+
+
+  </main>
+  <footer class="main-footer">
+
+  </footer>
 
   </body>
 </html>
