--- a/index.html
+++ b/index.html
@@ -85,12 +85,26 @@
     <section class="modal modal-appointment">
       <h2 class="visually-hidden">Бронирование</h2>
       <form class="appointment-form" action="#" method="post">
-        
+      <label for="incoming-date">Дата заезда:</label>
+        <input type="date" name="incoming-date" id="incoming-date"><br>
+      <label for="outgoing-date">Дата выезда:</label>
+        <input type="date" name="outgoing-date" id="outgoing-date"><br>
+      <label for="adult-count">Взрослые</label>
+        <input class="btn-minus" type="button" value="-">
+        <input id="adult-count" type="text" placeholder="0">
+        <input class="btn-plus" type="button" value="+">
+      <label for="chield-count">Дети</label>
+        <input class="btn-minus" type="button" value="-">
+        <input id="chield-count" type="text" placeholder="0">
+        <input class="btn-plus" type="button" value="+"><br>
+      <button class="button appointment-submit-button" type="submit">Найти</button>
       </form>
     </section>
 
-
-
+    <section class="map">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13094.228363493972!2d-111.76162156629346!3d34.86735470447219!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1418053046776" width="1200" height="600" frameborder="0" style="border:0"></iframe>
+    </section>
+    
   </main>
   <footer class="main-footer">
 
