--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <header class="main-header">
     <h2 class="visually-hidden">Навигация по сайту</h2>
     <nav class="main-navigation">
+      <!--<a class="main-header-logo" href="index.html">-->
+        <!--<img src="img/main-logo.svg" width="111" height="84" alt="Логотип Седона">-->
+      <!--</a>-->
       <ul class="main-navigation-menu">
         <li><a href="#">Информация</a></li>
         <li><a href="#">Фото и видео</a></li>
@@ -109,7 +112,6 @@
   </main>
   <footer class="main-footer">
     <span class="tag">#VISITSEDONA</span>
-
     <div class="footer-social">
       <ul>
         <li><a class="social-button" href="#">Twitter</a></li>
@@ -117,11 +119,7 @@
         <li><a class="social-button" href="#">Youtube</a></li>
       </ul>
       <img class="developer" src="img/developer.svg" alt="Разработчик">
-
     </div>
-
-
   </footer>
-
   </body>
 </html>
