Закончил разметку каталога отелей

--- a/hotels.html
+++ b/hotels.html
@@ -72,13 +72,88 @@
       </fieldset>
         <button class="button filters-submit-button" type="submit">Показать</button>
     </form>
-
-
   </section>
 
+  <section class="sorting">
+    <h2>Найдено: 3</h2>
+    <h3>Сортировка:</h3>
+    <ul class="sorting-for">
+      <li>
+        <a class="sorting-by active" href="#">По цене</a>
+      </li>
+      <li>
+        <a class="sorting-by" href="#">По типу</a>
+      </li>
+      <li>
+        <a class="sorting-by" href="#">По рейтингу</a>
+      </li>
+    </ul>
+    <ul class="sorting-from">
+      <li>
+        <a class="sorting-from-high" href="#"></a>
+      </li>
+      <li>
+        <a class="sorting-from-down active" href="#"></a>
+      </li>
+    </ul>
+  </section>
+
+  <section class="results">
+    <h2 class="visually-hidden">Результаты поиска</h2>
+    <ul class="result">
+      <li>
+        <h3 class="result-item">Amara Resort & Spa</h3>
+        <span class="result-category">Гостиница</span>
+        <span class="result-price">От 4000 Р.</span>
+        <span class="raiting">Рейтинг: 8,5</span>
+        <p class="result-image">
+          <a href="#">
+            <img src="img/amara-resort.svg" width="220" height="165" alt="Amara Resort & Spa">
+          </a>
+        </p>
+        <a class="button" href="#">Подробнее</a>
+        <a class="button" href="#">Забронировать</a>
+      </li>
+      <li>
+        <h3 class="result-item">Desert Quail Inn</h3>
+        <span class="result-category">Мотель</span>
+        <span class="result-price">От 3000 Р.</span>
+        <span class="raiting">Рейтинг: 8,9</span>
+        <p class="result-image">
+          <a href="#">
+            <img src="img/desert-quail-inn.svg" width="220" height="165" alt="Desert Quail Inn">
+          </a>
+        </p>
+        <a class="button" href="#">Подробнее</a>
+        <a class="button" href="#">Забронировать</a>
+      </li>
+      <li>
+        <h3 class="result-item">Villas At Poco Diablo</h3>
+        <span class="result-category">Апартаменты</span>
+        <span class="result-price">От 2000 Р.</span>
+        <span class="raiting">Рейтинг: 9,2</span>
+        <p class="result-image">
+          <a href="#">
+            <img src="img/villas-at-poco-diablo.svg" width="220" height="165" alt="Villas At Poco Diablo">
+          </a>
+        </p>
+        <a class="button" href="#">Подробнее</a>
+        <a class="button" href="#">Забронировать</a>
+      </li>
+    </ul>
+  </section>
 
 </main>
 <footer class="main-footer">
+  <span class="tag">#VISITSEDONA</span>
+  <div class="footer-social">
+    <ul>
+      <li><a class="social-button" href="#">Twitter</a></li>
+      <li><a class="social-button" href="#">Facebook</a></li>
+      <li><a class="social-button" href="#">Youtube</a></li>
+    </ul>
+    <img class="developer" src="img/developer.svg" alt="Разработчик">
+  </div>
 
 </footer>
 
