--- a/static/hotels.html
+++ b/static/hotels.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Городок Седона: Отели</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
+
 </head>
 <body>
 <header class="main-header">
