--- a/static/index.html
+++ b/static/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Городок Седона</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
 
