--- a/static/index.html
+++ b/static/index.html
@@ -11,13 +11,12 @@
   <header class="main-header">
     <h2 class="visually-hidden">Навигация по сайту</h2>
     <nav class="main-navigation">
-      <!--<a class="main-header-logo" href="index.html">-->
-        <!--<img src="img/main-logo.svg" width="111" height="84" alt="Логотип Седона">-->
-      <!--</a>-->
+      <a class="main-header-logo" href="index.html">
+        <img src="img/main-logo.svg" width="1200" height="84" alt="Логотип Седона">
+      </a>
       <ul class="main-navigation-menu">
         <li><a href="#">Информация</a></li>
         <li><a href="#">Фото и видео</a></li>
-        <li class="main-navigation-logo"><img src="img/main-logo.svg" width="110" height="110" alt="Логотип Седона"></li>
         <li><a href="#">Карта штата</a></li>
         <li><a href="hotels.html">Гостиницы</a></li>
       </ul>
@@ -26,12 +25,14 @@
 
   <main class="container">
     <h1 class="visually-hidden">Сайт городка Седона</h1>
-    <section class="advantage">
+
+    <section class="intro">
         <h2>Седона - небольшой городок в Аризоне,<br>
           заслуживающий большего!</h2>
       <p>Рассмотрим 5 причин, по которым седона круче, чем гранд-каньон!</p>
     </section>
-    <section class="advantage-number-uno">
+
+    <section class="intro-uno">
       <h2>Настоящий городок</h2>
       <span>-№1-</span>
       <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
@@ -55,14 +56,14 @@
       </ul>
     </section>
 
-    <section class="advantage-number-two">
+    <section class="intro-two">
       <h2>Там есть мост дьявола</h2>
       <span>-№2-</span>
       <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
       <img src="img/advantage-number-two.svg" width="110" height="110" alt="Фото моста Дьявола">
     </section>
 
-    <section class="advantages-other">
+    <section class="intro-other">
       <ul class="advantage-number-two-items">
         <li>
           <h3>Небольшая площадь</h3>
