--- a/static/index.html
+++ b/static/index.html
@@ -12,7 +12,7 @@
     <h2 class="visually-hidden">Навигация по сайту</h2>
     <nav class="main-navigation">
       <a class="main-header-logo" href="index.html">
-        <img src="img/main-logo.svg" width="1200" height="84" alt="Логотип Седона">
+        <img src="img/logo.png" width="138" height="70" alt="Логотип Седона">
       </a>
       <ul class="main-navigation-menu">
         <li><a href="#">Информация</a></li>
