--- a/static/index.html
+++ b/static/index.html
@@ -60,11 +60,11 @@
       <h2>Там есть мост дьявола</h2>
       <span>-№2-</span>
       <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-      <img src="img/advantage-number-two.svg" width="110" height="110" alt="Фото моста Дьявола">
+      <img src="img/intro-two.svg" width="110" height="110" alt="Фото моста Дьявола">
     </section>
 
     <section class="intro-other">
-      <ul class="advantage-number-two-items">
+      <ul class="intro-two-items">
         <li>
           <h3>Небольшая площадь</h3>
           <span>- №3 -</span>
