--- a/static/index.html
+++ b/static/index.html
@@ -14,7 +14,7 @@
       <a class="main-header-logo" href="index.html">
         <img src="img/logo.png" width="138" height="70" alt="Логотип Седона">
       </a>
-      <ul class="main-navigation-menu">
+      <ul class="site-navigation">
         <li><a href="#">Информация</a></li>
         <li><a href="#">Фото и видео</a></li>
         <li><a href="#">Карта штата</a></li>
@@ -36,11 +36,11 @@
       <h2>Настоящий городок</h2>
       <span>-№1-</span>
       <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
-      <img src="img/advantage-number-uno.svg" width="110" height="110" alt="Фото городка">
+      <img src="img/intro-uno.png" width="800" height="256" alt="Фото городка">
     </section>
 
     <section class="services">
-      <ul class="services-items">
+      <ul class="services-list">
         <li>
           <h3>Жилье</h3>
           <p>Рекомендуем пожить в настоящем отеле, все как в кино!</p>
@@ -60,7 +60,7 @@
       <h2>Там есть мост дьявола</h2>
       <span>-№2-</span>
       <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-      <img src="img/intro-two.svg" width="110" height="110" alt="Фото моста Дьявола">
+      <img src="img/intro-two.png" width="800" height="256" alt="Фото моста Дьявола">
     </section>
 
     <section class="intro-other">
