--- a/static/index.html
+++ b/static/index.html
@@ -86,7 +86,7 @@
     <section class="appointment-info">
       <h2>Заинтересовались?</h2>
       <p>Укажите предпологаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-      <a class="button search-hotel-button" href="#">Поиск гостиницы в Седоне</a>
+      <button class="button search-hotel-button">Поиск гостиницы в Седоне</button>
     </section>
 
     <section class="modal modal-appointment">
