--- a/static/hotels.html
+++ b/static/hotels.html
@@ -5,21 +5,21 @@
     <title>Городок Седона: Отели</title>
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
-
 </head>
-<body>
+<body class="inner-page">
 <header class="main-header">
   <h2 class="visually-hidden">Навигация по сайту</h2>
   <nav class="main-navigation">
-    <ul class="main-navigation-menu">
+    <a class="main-header-logo" href="index.html">
+      <img src="img/logo.png" width="138" height="70" alt="Логотип Седона">
+    </a>
+    <ul class="site-navigation">
       <li><a href="#">Информация</a></li>
       <li><a href="#">Фото и видео</a></li>
-      <li class="main-navigation-logo"><img src="img/main-logo.svg" width="110" height="110" alt="Логотип городка Седона"></li>
       <li><a href="#">Карта штата</a></li>
-      <li class="site-navigation-current"><a href="hotels.html">Гостиницы</a></li>
+      <li class="site-navigation-current">Гостиницы</li>
     </ul>
   </nav>
-
 </header>
 <main class="container">
   <h1 class="visually-hidden">Гостиницы городка Седона</h1>
@@ -111,11 +111,11 @@
         <span class="raiting">Рейтинг: 8,5</span>
         <p class="result-image">
           <a href="#">
-            <img src="img/amara-resort.svg" width="220" height="165" alt="Amara Resort & Spa">
+            <img src="img/amara-resort.jpg" width="135" height="90" alt="Amara Resort & Spa">
           </a>
         </p>
         <a class="button" href="#">Подробнее</a>
-        <a class="button" href="#">Забронировать</a>
+        <a class="button button-reservation" href="#">Забронировать</a>
       </li>
       <li>
         <h3 class="result-item">Desert Quail Inn</h3>
@@ -124,11 +124,11 @@
         <span class="raiting">Рейтинг: 8,9</span>
         <p class="result-image">
           <a href="#">
-            <img src="img/desert-quail-inn.svg" width="220" height="165" alt="Desert Quail Inn">
+            <img src="img/desert-quail-inn.jpg" width="135" height="90" alt="Desert Quail Inn">
           </a>
         </p>
         <a class="button" href="#">Подробнее</a>
-        <a class="button" href="#">Забронировать</a>
+        <a class="button button-reservation" href="#">Забронировать</a>
       </li>
       <li>
         <h3 class="result-item">Villas At Poco Diablo</h3>
@@ -137,11 +137,11 @@
         <span class="raiting">Рейтинг: 9,2</span>
         <p class="result-image">
           <a href="#">
-            <img src="img/villas-at-poco-diablo.svg" width="220" height="165" alt="Villas At Poco Diablo">
+            <img src="img/villas-at-poco-diablo.jpg" width="220" height="165" alt="Villas At Poco Diablo">
           </a>
         </p>
         <a class="button" href="#">Подробнее</a>
-        <a class="button" href="#">Забронировать</a>
+        <a class="button button-reservation" href="#">Забронировать</a>
       </li>
     </ul>
   </section>
