--- a/static/hotels.html
+++ b/static/hotels.html
@@ -28,7 +28,7 @@
     <form class="filter" action="hotels.html" method="get">
       <fieldset class="filter-infrastructure">
         <legend>Инфраструктура</legend>
-        <ul class="filter-infrastructure-option">
+        <ul class="filter-infrastructure">
           <li class="filter-option">
             <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="pool" id="pool" checked>
             <label for="pool">Бассейн</label>
@@ -78,8 +78,8 @@
   </section>
 
   <section class="sorting">
-    <h2>Найдено: 3</h2>
-    <h3>Сортировка:</h3>
+    <span>Найдено: 3</span>
+    <h2>Сортировка:</h2>
     <ul class="sorting-for">
       <li>
         <a class="sorting-by active" href="#">По цене</a>
