--- a/static/hotels.html
+++ b/static/hotels.html
@@ -80,15 +80,15 @@
   <section class="sorting">
     <span>Найдено: 3</span>
     <h2>Сортировка:</h2>
-    <ul class="sorting-for">
+    <ul class="sorting-by">
       <li>
-        <a class="sorting-by active" href="#">По цене</a>
+        <a class="sorting-by-item active" href="#">По цене</a>
       </li>
       <li>
-        <a class="sorting-by" href="#">По типу</a>
+        <a class="sorting-by-item" href="#">По типу</a>
       </li>
       <li>
-        <a class="sorting-by" href="#">По рейтингу</a>
+        <a class="sorting-by-item" href="#">По рейтингу</a>
       </li>
     </ul>
     <ul class="sorting-from">
