--- a/static/index.html
+++ b/static/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-
+  <div class="container">
   <header class="main-header">
     <h2 class="visually-hidden">Навигация по сайту</h2>
     <nav class="main-navigation">
@@ -15,13 +15,22 @@
         <img src="img/logo.png" width="138" height="70" alt="Логотип Седона">
       </a>
       <ul class="site-navigation">
-        <li><a href="#">Информация</a></li>
-        <li><a href="#">Фото и видео</a></li>
-        <li><a href="#">Карта штата</a></li>
-        <li><a href="hotels.html">Гостиницы</a></li>
+        <li>
+          <a href="#">Информация</a>
+        </li>
+        <li>
+          <a href="#">Фото и видео</a>
+        </li>
+        <li>
+          <a href="#">Карта штата</a>
+        </li>
+        <li>
+          <a href="hotels.html">Гостиницы</a>
+        </li>
       </ul>
     </nav>
   </header>
+  </div>
 
   <main class="container">
     <h1 class="visually-hidden">Сайт городка Седона</h1>
@@ -113,6 +122,7 @@
     </section>
 
   </main>
+  <div class="container">
   <footer class="main-footer">
     <span class="tag">#VISITSEDONA</span>
     <div class="footer-social">
@@ -124,5 +134,6 @@
       <img class="developer" src="img/developer.svg" alt="Разработчик">
     </div>
   </footer>
+  </div>
   </body>
 </html>
