--- a/static/index.html
+++ b/static/index.html
@@ -42,9 +42,11 @@
     </section>
 
     <section class="intro-uno">
+      <div class="obertka-uno">
       <h2>Настоящий городок</h2>
       <span>-№1-</span>
       <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
+      </div>
       <img src="img/intro-uno.png" width="800" height="256" alt="Фото городка">
     </section>
 
@@ -66,14 +68,16 @@
     </section>
 
     <section class="intro-two">
+      <img src="img/intro-two.png" width="800" height="256" alt="Фото моста Дьявола">
+      <div class="obertka-two">
       <h2>Там есть мост дьявола</h2>
       <span>-№2-</span>
       <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-      <img src="img/intro-two.png" width="800" height="256" alt="Фото моста Дьявола">
+      </div>
     </section>
 
     <section class="intro-other">
-      <ul class="intro-two-items">
+      <ul class="intro-others-items">
         <li>
           <h3>Небольшая площадь</h3>
           <span>- №3 -</span>
