--- a/static/index.html
+++ b/static/index.html
@@ -34,7 +34,7 @@
 
   <main class="container">
     <h1 class="visually-hidden">Сайт городка Седона</h1>
-
+    <div class="welcome-banner"></div>
     <section class="intro">
         <h2>Седона - небольшой городок в Аризоне,<br>
           заслуживающий большего!</h2>
@@ -77,18 +77,18 @@
     </section>
 
     <section class="intro-other">
-      <ul class="intro-others-items">
-        <li>
+      <ul class="intro-other-items">
+        <li class="intro-item">
           <h3>Небольшая площадь</h3>
           <span>- №3 -</span>
           <p>Все достопримечательности находятся очень близко</p>
         </li>
-        <li>
+        <li class="intro-item">
           <h3>Красивая дорога</h3>
           <span>- №4 -</span>
           <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </li>
-        <li>
+        <li class="intro-item">
           <h3>Мало туристов</h3>
           <span> - №5 -</span>
           <p>Большинство едет в Гранд-Каньон и толпится там</p>
