--- a/static/hotels.html
+++ b/static/hotels.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body class="inner-page">
+<div class="container">
 <header class="main-header">
   <h2 class="visually-hidden">Навигация по сайту</h2>
   <nav class="main-navigation">
@@ -21,6 +22,7 @@
     </ul>
   </nav>
 </header>
+</div>
 <main class="container">
   <h1 class="visually-hidden">Гостиницы городка Седона</h1>
   <section class="filters">
@@ -72,8 +74,8 @@
             <input class="visually-hidden filter-input filter-input-checkbox" type="text" name="max-cost" id="max-cost" value="3000">
           </li>
         </ul>
-      </fieldset>
         <button class="button filters-submit-button" type="submit">Показать</button>
+      </fieldset>
     </form>
   </section>
 
@@ -104,7 +106,7 @@
   <section class="results">
     <h2 class="visually-hidden">Результаты поиска</h2>
     <ul class="result">
-      <li>
+      <li class="results-item">
         <h3 class="result-item">Amara Resort & Spa</h3>
         <span class="result-category">Гостиница</span>
         <span class="result-price">От 4000 Р.</span>
@@ -117,7 +119,7 @@
         <a class="button" href="#">Подробнее</a>
         <a class="button button-reservation" href="#">Забронировать</a>
       </li>
-      <li>
+      <li class="results-item">
         <h3 class="result-item">Desert Quail Inn</h3>
         <span class="result-category">Мотель</span>
         <span class="result-price">От 3000 Р.</span>
@@ -130,7 +132,7 @@
         <a class="button" href="#">Подробнее</a>
         <a class="button button-reservation" href="#">Забронировать</a>
       </li>
-      <li>
+      <li class="results-item">
         <h3 class="result-item">Villas At Poco Diablo</h3>
         <span class="result-category">Апартаменты</span>
         <span class="result-price">От 2000 Р.</span>
