--- a/static/hotels.html
+++ b/static/hotels.html
@@ -11,13 +11,21 @@
 <header class="main-header">
   <h2 class="visually-hidden">Навигация по сайту</h2>
   <nav class="main-navigation">
-    <a class="main-header-logo" href="index.html">
-      <img src="img/logo.png" width="138" height="70" alt="Логотип Седона">
-    </a>
     <ul class="site-navigation">
-      <li><a href="#">Информация</a></li>
-      <li><a href="#">Фото и видео</a></li>
-      <li><a href="#">Карта штата</a></li>
+      <li>
+        <a class="main-header-logo" href="index.html">
+          <img src="img/logo.png" width="138" height="70" alt="На главную страницу Седона">
+        </a>
+      </li>
+      <li>
+        <a href="#">Информация</a>
+      </li>
+      <li>
+        <a href="#">Фото и видео</a>
+      </li>
+      <li>
+        <a href="#">Карта штата</a>
+      </li>
       <li class="site-navigation-current">Гостиницы</li>
     </ul>
   </nav>
