--- a/static/hotels.html
+++ b/static/hotels.html
@@ -36,7 +36,7 @@
   <section class="filters">
     <h2 class="visually-hidden">Фильтр Гостиниц</h2>
     <form class="filter" action="hotels.html" method="get">
-      <fieldset class="filter-infrastructure">
+      <fieldset class="filter-field-infrastructure">
         <legend>Инфраструктура</legend>
         <ul class="filter-infrastructure">
           <li class="filter-option">
@@ -53,9 +53,9 @@
           </li>
         </ul>
       </fieldset>
-      <fieldset class="filter-quarters-type">
+      <fieldset class="filter-field-quarters">
         <legend>Тип жилья:</legend>
-        <ul class="filter-quarters-type-option">
+        <ul class="filter-quarters-type">
           <li class="filter-option">
             <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="hotel" id="hotel" checked>
             <label for="hotel">Гостиница</label>
@@ -70,7 +70,7 @@
           </li>
         </ul>
       </fieldset>
-      <fieldset class="cost-per-day">
+      <fieldset class="cost-per-day-field">
         <legend>Стоимость в сутки (Р):</legend>
         <ul class="cost-per-day-filter">
           <li class="filter-option">
