--- a/static/index.html
+++ b/static/index.html
@@ -7,16 +7,13 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-  <div class="container">
   <header class="main-header">
     <h2 class="visually-hidden">Навигация по сайту</h2>
     <nav class="main-navigation">
+      <a class="main-header-logo" href="index.html">
+        <img src="img/logo.png" width="138" height="70" alt="Логотип Седона">
+      </a>
       <ul class="site-navigation">
-        <li>
-          <a class="main-header-logo" href="index.html">
-            <img src="img/logo.png" width="138" height="70" alt="Логотип Седона">
-          </a>
-        </li>
         <li>
           <a href="#">Информация</a>
         </li>
@@ -32,7 +29,6 @@
       </ul>
     </nav>
   </header>
-  </div>
 
   <main class="container">
     <h1 class="visually-hidden">Сайт городка Седона</h1>
@@ -44,11 +40,9 @@
     </section>
 
     <section class="intro-uno">
-      <div class="obertka-uno">
       <h2>Настоящий городок</h2>
       <span>-№1-</span>
       <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
-      </div>
       <img src="img/intro-uno.png" width="800" height="256" alt="Фото городка">
     </section>
 
@@ -71,26 +65,24 @@
 
     <section class="intro-two">
       <img src="img/intro-two.png" width="800" height="256" alt="Фото моста Дьявола">
-      <div class="obertka-two">
       <h2>Там есть мост дьявола</h2>
       <span>-№2-</span>
       <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-      </div>
     </section>
 
     <section class="intro-other">
       <ul class="intro-other-items">
-        <li class="intro-item">
+        <li class="intro-other-items-item">
           <h3>Небольшая площадь</h3>
           <span>- №3 -</span>
           <p>Все достопримечательности находятся очень близко</p>
         </li>
-        <li class="intro-item">
+        <li class="intro-other-items-item">
           <h3>Красивая дорога</h3>
           <span>- №4 -</span>
           <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </li>
-        <li class="intro-item">
+        <li class="intro-other-items-item">
           <h3>Мало туристов</h3>
           <span> - №5 -</span>
           <p>Большинство едет в Гранд-Каньон и толпится там</p>
@@ -104,7 +96,7 @@
       <button class="button search-hotel-button">Поиск гостиницы в Седоне</button>
     </section>
 
-    <section class="modal modal-appointment">
+    <section class="modal-appointment modal">
       <h2 class="visually-hidden">Бронирование</h2>
       <form class="appointment-form" action="#" method="post">
       <label for="incoming-date">Дата заезда:</label>
@@ -128,7 +120,6 @@
     </section>
 
   </main>
-  <div class="container">
   <footer class="main-footer">
     <span class="tag">#VISITSEDONA</span>
     <div class="footer-social">
@@ -140,6 +131,5 @@
       <img class="developer" src="img/developer.svg" alt="Разработчик">
     </div>
   </footer>
-  </div>
   </body>
 </html>
