--- a/static/index.html
+++ b/static/index.html
@@ -6,8 +6,9 @@
     <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
   </head>
-  <body>
-  <header class="main-header">
+  <body class="container-big">
+
+  <header class="main-header container">
     <h2 class="visually-hidden">Навигация по сайту</h2>
     <nav class="main-navigation">
       <a class="main-header-logo" href="index.html">
@@ -29,7 +30,6 @@
       </ul>
     </nav>
   </header>
-
   <main class="container">
     <h1 class="visually-hidden">Сайт городка Седона</h1>
     <div class="welcome-banner"></div>
@@ -40,9 +40,11 @@
     </section>
 
     <section class="intro-uno">
+      <div class="obertka">
       <h2>Настоящий городок</h2>
       <span>-№1-</span>
       <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
+      </div>
       <img src="img/intro-uno.png" width="800" height="256" alt="Фото городка">
     </section>
 
@@ -65,24 +67,26 @@
 
     <section class="intro-two">
       <img src="img/intro-two.png" width="800" height="256" alt="Фото моста Дьявола">
+      <div class="obertka">
       <h2>Там есть мост дьявола</h2>
       <span>-№2-</span>
       <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
+      </div>
     </section>
 
     <section class="intro-other">
       <ul class="intro-other-items">
-        <li class="intro-other-items-item">
+        <li>
           <h3>Небольшая площадь</h3>
           <span>- №3 -</span>
           <p>Все достопримечательности находятся очень близко</p>
         </li>
-        <li class="intro-other-items-item">
+        <li>
           <h3>Красивая дорога</h3>
           <span>- №4 -</span>
           <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </li>
-        <li class="intro-other-items-item">
+        <li>
           <h3>Мало туристов</h3>
           <span> - №5 -</span>
           <p>Большинство едет в Гранд-Каньон и толпится там</p>
@@ -120,7 +124,7 @@
     </section>
 
   </main>
-  <footer class="main-footer">
+  <footer class="main-footer container">
     <span class="tag">#VISITSEDONA</span>
     <div class="footer-social">
       <ul>
