--- a/static/index.html
+++ b/static/index.html
@@ -96,7 +96,8 @@
 
     <section class="appointment-info">
       <h2>Заинтересовались?</h2>
-      <p>Укажите предпологаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+      <p>Укажите предпологаемые даты поездки,<br>
+        и мы покажем вам лучшие предложения гостиниц в Седоне</p>
       <button class="button search-hotel-button">Поиск гостиницы в Седоне</button>
     </section>
 
