--- a/static/index.html
+++ b/static/index.html
@@ -114,13 +114,13 @@
         </p>
         <div class="form-obertka">
         <p>
-      <label for="adult-count">Взрослые</label>
+      <label for="adult-count">Взрослые:</label>
         <input class="btn-minus" type="button" value="-">
         <input id="adult-count" type="text" placeholder="0">
         <input class="btn-plus" type="button" value="+">
         </p>
         <p>
-      <label for="chield-count">Дети</label>
+      <label for="chield-count">Дети:</label>
         <input class="btn-minus" type="button" value="-">
         <input id="chield-count" type="text" placeholder="0">
         <input class="btn-plus" type="button" value="+"><br>
