--- a/static/index.html
+++ b/static/index.html
@@ -41,9 +41,9 @@
 
     <section class="intro-uno">
       <div class="obertka">
-      <h2>Настоящий городок</h2>
-      <span>-№1-</span>
-      <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
+        <h2>Настоящий<br> городок</h2>
+        <span>-№1-</span>
+        <p>Седона - не аттракцион для туристов, там течет своя жизнь</p>
       </div>
       <img src="img/intro-uno.png" width="800" height="256" alt="Фото городка">
     </section>
@@ -56,12 +56,12 @@
           <p>Рекомендуем пожить в настоящем отеле, все как в кино!</p>
         </li>
         <li>
-          <img src="img/icon-2.png"  width="75" height="72" alt="Еда">
+          <img src="img/icon-3.png"  width="74" height="70" alt="Сувениры">
           <h3>Еда</h3>
           <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
         </li>
         <li>
-          <img src="img/icon-3.png"  width="75" height="72" alt="Сувениры">
+          <img src="img/icon-2.png"  width="64" height="72" alt="Еда">
           <h3>Сувениры</h3>
           <p>Не только китайского, но и местного производства!</p>
         </li>
